--- a/PlantPlaces/WebContent/template.xhtml
+++ b/PlantPlaces/WebContent/template.xhtml
@@ -10,7 +10,6 @@
 	<h:outputStylesheet library="css" name="default.css" />
 	<link rel="stylesheet" href="css/default.css" type="text/css" />
 	<h:outputStylesheet library="css" name="cssLayout.css" />
-	
 	<link rel="stylesheet" media="screen" href="css/styles.css"  type="text/css" />
 	<link rel="stylesheet" media="print" href="css/print.css"  type="text/css" />
 	<link rel="stylesheet" media="(max-width: 800px)" href="css/print.css"  type="text/css" />
@@ -36,6 +35,9 @@
 					<h:link outcome="privacy" value="Privacy policy and terms of use" />
 				</ui:insert>
 			</h:form>
+		</div>
+		<div class="printonly">
+			<p:outputLabel value="Printed from PlantedPlaces.com" />
 		</div>
 	</div>
 </h:body>
