--- a/PlantPlaces/WebContent/addplant.xhtml
+++ b/PlantPlaces/WebContent/addplant.xhtml
@@ -14,6 +14,7 @@
 		
 		Enter Plant details.
 		<h:form>
+			<p:growl id="growl" showDetail="true" sticky="False" />
 			<h:outputLabel value="Genus" />
 			<p:inputText value="#{plant.genus}" /><br />
 			<h:outputLabel value="Species" />
@@ -22,7 +23,7 @@
 			<p:inputText value="#{plant.cultivar}" /><br />
 			<h:outputLabel value="Common Name" />
 			<p:inputText value="#{plant.common}" /><br />
-			<p:commandButton value="Submit" actionListener="#{addPlant.execute}"/>	
+			<p:commandButton value="Submit" actionListener="#{addPlant.execute}" update="growl" />	
 		</h:form>
 		
 		
