--- a/PlantPlaces/WebContent/speciemen.xhtml
+++ b/PlantPlaces/WebContent/speciemen.xhtml
@@ -55,8 +55,6 @@
 			<p:commandButton value="Submit" actionListener="#{speciemenVO.save}" update="growl" /><br />
 		</h:form>
 		
-		<img src="images/image.jpg"></img>
-	
 		<p:fieldset legend="Add a Photo to the Specimen">	
 			<h:form enctype="multipart/form-data">
 				<p:growl id="messages" showDetail="true" />
@@ -69,6 +67,9 @@
 		</p:fieldset>
 		<h4>Speciemen Management</h4>		
 		
+		<p:galleria value="#{speciemenVO.photos}" var="image" panelWidth="500" panelHeight="313" showCaption="true">
+    		<p:graphicImage name="images/#{image}" alt="Image Description for #{image}" title="#{image}"/>
+		</p:galleria>
 		
 		<h:link value="Contact Us" outcome="contactUs"/>
 		</ui:define>	
